<resources>
    <string name="app_name">Color Noter</string>
    <string name="notes">Notes</string>
    <string name="new_note">New Note</string>
    <string name="new_item">New Item</string>
    <string name="note_color">Note Color</string>
    <string name="whats_in_your_mind">What is in your mind ?</string>
    <string name="pick_a_color">Pick a color :</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="switch_color">Switch Color</string>
    <string name="settings">Settings</string>
    <string name="my_notes">My Notes</string>
    <string name="recycler_bin">Recycler Bin</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="more_options">More Options</string>
    <string name="save_success">Saved Successfully !</string>
    <string name="title_short">Title is too short !</string>
    <string name="undo">Undo</string>
    <string name="lock_unlock">Switch Lock</string>
    <string name="redo">Redo</string>
    <string name="confirm">Confirm</string>
    <string name="restore">Restore</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="discard">Discard</string>
    <string name="select_all">Select/Deselect All</string>
    <string name="delete_selection">Delete Selected</string>
    <string name="change_selection_color">Change Selection</string>
    <string name="empty_bin">Permanently Delete All Items</string>
    <string name="no_item_selected">No Item Selected</string>
    <string name="lighting_theme">Lighting Theme</string>
    <string name="app_color">App Color</string>
    <string name="sync">Sync</string>
    <string name="sync_now">Syncing now …</string>
    <string name="sync_success">Synchronization Success</string>
    <string name="sync_unable">Unable to sync !</string>
    <string name="sync_auto">Auto Sync</string>
    <string name="log_out">Log out</string>
    <string name="error">Error</string>
    <string name="network_error">Network Error</string>
    <string name="sync_time_out">Synchronization is unexpectedly taking too long …</string>
    <string name="sync_time_out_return">Synchronization is unexpectedly taking too long … Returning to Login screen.</string>

    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="sort_by_color">By Color</string>
    <string name="sort_by_priority">By Priority</string>
    <string name="sort_by_due">By Due date</string>
    <string name="sort_by_alpha">By Alpha</string>
    <string name="sort_by_status">By Status</string>
    <string name="sort_by_creation">By Creation</string>
    <string name="sort_by_modification">By Modification</string>

    <string name="login">Login</string>
    <string name="logging_in">Logging In</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">No Account? Sign up here!</string>
    <string name="remember_me">Remember Me</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="bad_combination">Could not find an account with this combination of username and password … Try again !</string>

    <string name="sign_in">Register</string>
    <string name="signing_in">Creating account, Please wait …</string>
    <string name="email">Email</string>
    <string name="user_exists">This username exists already, please try another one !</string>
    <string name="short_password">The password is too short !</string>
    <string name="email_exists">This email is already used</string>
    <string name="have_account">Already have an account? Login in here!</string>

    <string name="username_exist">Username already exist! Please try another one!</string>
    <string name="password_bad">The password you entered is invalid or short or may contains some prohibited characters :</string>
    <string name="username_bad">The username you entered is either short or contains some prohibited characters :</string>
    <string name="email_exist">Provided email already in use, try another email or login.</string>

    <string name="low_priority">Unimportant</string>
    <string name="medium_priority">Normal</string>
    <string name="high_priority">Important</string>
    <string name="urgent_priority">Urgent</string>

    <string name="add_item">Add Item</string>
    <string name="delete_item">Delete Item</string>

    <string name="priority">Priority</string>
    <string name="set_priority">Set Priority</string>

    <string name="reminder">None</string>
    <string name="set_reminder">Set Reminder</string>

    <string name="feature_unavailable">Feature Unavailable at the moment !</string>

    <string name="nothing_to_undo">Nothing to Undo !</string>
    <string name="nothing_to_redo">Nothing to Redo !</string>

    <string name="text_divider">/</string>

    <string name="create">Create</string>
    <string name="create_hint">Create a new Note</string>

    <string name="text_note">Text Note</string>
    <string name="text_note_hint">Create a Text Note</string>

    <string name="check_list_note">Check List</string>
    <string name="check_list_note_hint">Create a check list note</string>

    <string name="no_user_name">Beta Color Noter User</string>
    <string name="no_user_email">Beta Color Noter Email</string>

    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <string name="what_is_new">What is new ?</string>
    <string name="ok">OK</string>
    <string name="about_12_2020">
        Color Noter \n
        Version : 0.9.12.2020 \n
        Latest stable release : 12/2020 \n
        Open Source Project
    </string>

    <string name="dialog_text_placeholder">Confirm Action ?</string>

    <string name="confirm_delete">Are you sure you want to delete this item ?</string>
    <string name="confirm_delete_selected">Are you sure you want to delete selected items ?</string>
    <string name="confirm_delete_permanently">Are you sure you want to delete this item permanently ?</string>
    <string name="confirm_delete_permanently_all">Are you sure you want to delete all items permanently ?</string>
    <string name="confirm_delete_permanently_selected">Are you sure you want to delete selected items permanently ?</string>
    <string name="confirm_restore">Are you sure you want to restore this item ?</string>
    <string name="confirm_restore_selected">Are you sure you want to restore selected items ?</string>
    <string name="confirm_restore_open">Are you sure you want to restore this item and open it ?</string>
    <string name="confirm_unsaved_changes">There are some unsaved changes, would you like to save and exit ?</string>

</resources>