<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item android:title="@string/sort"
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">

        <menu>
            <item android:title="@string/sort_by_alpha"
                android:id="@+id/sort_alpha"
                app:showAsAction="never"/>

            <item android:title="@string/sort_by_status"
                android:id="@+id/sort_status"
                app:showAsAction="never"/>

            <item android:title="@string/sort_by_priority"
                android:id="@+id/sort_priority"
                app:showAsAction="never"/>

            <item android:title="@string/sort_by_creation"
                android:id="@+id/sort_creation"
                app:showAsAction="never"/>

            <item android:title="@string/sort_by_modification"
                android:id="@+id/sort_modification"
                app:showAsAction="never"/>

            <item android:title="@string/sort_by_due"
                android:id="@+id/sort_due"
                app:showAsAction="never"/>
        </menu>

    </item>

    <item android:title="@string/save"
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        app:showAsAction="always">
    </item>

</menu>