<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:title="@string/notes"
            android:icon="@drawable/ic_file"
            />
        <item
            android:id="@+id/nav_recycler_bin"
            android:title="@string/recycler_bin"
            android:icon="@drawable/ic_delete"
            />

    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_sync"
                android:title="@string/sync"
                android:icon="@drawable/ic_sync"
                />

            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings"
                />

            <item
                android:id="@+id/nav_about"
                android:title="@string/about"
                android:icon="@drawable/ic_info"
                />

            <item
                android:id="@+id/nav_updates"
                android:title="@string/what_is_new"
                android:icon="@drawable/ic_text"
                />

            <item
                android:id="@+id/nav_log_out"
                android:title="@string/log_out"
                android:icon="@drawable/ic_log_out"
                />

        </menu>
    </item>

</menu>