<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/undo"
        android:id="@+id/undo"
        android:icon="@drawable/ic_undo"
        app:showAsAction="always">
    </item>

    <item android:title="@string/redo"
        android:id="@+id/redo"
        android:icon="@drawable/ic_redo"
        app:showAsAction="always">
    </item>

    <item android:title="@string/lock_unlock"
        android:id="@+id/lock"
        android:icon="@drawable/ic_locked"
        app:showAsAction="always">
    </item>

    <item android:title="@string/save"
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        app:showAsAction="always">
    </item>

</menu>