<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/toolbar_background"
    android:background="@color/grey_dark_sonic_silver"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:elevation="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/toolbar_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/toolbar_select_all"
        android:contentDescription="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:src="@drawable/ic_close"
        android:background="?android:attr/selectableItemBackground"/>

    <ImageView
        android:id="@+id/toolbar_select_all"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/toolbar_cancel"
        android:contentDescription="@string/select_all"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_select_all"
        android:background="?android:attr/selectableItemBackground"/>

    <ImageView
        android:id="@+id/toolbar_empty_recycler"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/toolbar_delete_selection"
        android:contentDescription="@string/empty_bin"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_empty_recycler_bin"
        android:background="?android:attr/selectableItemBackground"/>

    <ImageView
        android:id="@+id/toolbar_delete_selection"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/toolbar_restore"
        android:contentDescription="@string/delete_permanently"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_perma_delete"
        android:background="?android:attr/selectableItemBackground"/>

    <ImageView
        android:id="@+id/toolbar_restore"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/restore"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_restore" />


</androidx.constraintlayout.widget.ConstraintLayout>