<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bot_section"
        android:paddingVertical="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center|top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_color_noter"
            />
        <TextView
            android:id="@+id/title_text"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:letterSpacing="0.2"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/grey_lighter_platinum"
        android:id="@+id/bot_section"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_section"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardElevation="16dp"
        app:cardCornerRadius="16dp"
        android:layout_margin="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:id="@+id/login_text"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="16dp"
                android:textSize="32sp"
                android:textAllCaps="true"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/email_field"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/username"
                android:autofillHints="@string/username"
                android:padding="16dp"
                android:layout_marginVertical="8dp"/>

            <EditText
                android:id="@+id/password_field"
                android:inputType="textNoSuggestions|textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/password"
                android:autofillHints="@string/password"
                android:padding="16dp"
                android:layout_marginVertical="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/remember_me_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/remember_me_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"/>

            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_spanish"
                android:backgroundTint="@color/grey_spanish"
                android:elevation="16dp"
                android:layout_marginTop = "8dp"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/no_account"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_darkest"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="UnusedAttribute"
                />



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>